--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -937,7 +937,6 @@ Dashboard As screen:
         Rectangle3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =442
-            Visible: =false
             Width: =561
             X: =419
             Y: =295
@@ -950,8 +949,7 @@ Dashboard As screen:
             FontWeight: =FontWeight.Bold
             Height: =64
             Size: =25
-            Text: ="Text"
-            Visible: =false
+            Text: ="Thank you"
             Width: =561
             X: =419
             Y: =295
@@ -963,7 +961,6 @@ Dashboard As screen:
             Height: =80
             Size: =25
             Text: ="Thank you for attendees event."
-            Visible: =false
             Width: =552
             X: =428
             Y: =503
@@ -972,7 +969,6 @@ Dashboard As screen:
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            Visible: =false
             Width: =50
             X: =930
             Y: =295
@@ -982,7 +978,6 @@ Dashboard As screen:
             Height: =437
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
-            Visible: =false
             Width: =552
             X: =428
             Y: =295
