--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -927,21 +927,12 @@ Dashboard As screen:
         Y: =230
         ZIndex: =27
 
-    Icon4 As icon.Heart:
-        Color: =RGBA(219, 219, 219, 1)
-        Height: =122
-        Icon: =Icon.Heart
-        Width: =134
-        X: =622
-        Y: =439
-        ZIndex: =33
-
-    Group3 As group:
+    thankyou As group:
         Height: =5
         Width: =5
         X: =40
         Y: =40
-        ZIndex: =33
+        ZIndex: =34
 
         Rectangle3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
@@ -959,8 +950,8 @@ Dashboard As screen:
             Height: =64
             Size: =25
             Text: ="Thank you"
-            Width: =561
-            X: =419
+            Width: =576
+            X: =404
             Y: =295
             ZIndex: =29
 
@@ -984,11 +975,20 @@ Dashboard As screen:
             ZIndex: =31
 
         HtmlText3 As htmlViewer:
-            Height: =437
+            Height: =473
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
             Width: =552
-            X: =428
+            X: =404
             Y: =295
             ZIndex: =32
+
+        Icon4 As icon.Heart:
+            Color: =RGBA(219, 219, 219, 1)
+            Height: =122
+            Icon: =Icon.Heart
+            Width: =134
+            X: =622
+            Y: =439
+            ZIndex: =33
 
