--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -307,6 +307,7 @@ Dashboard As screen:
 
     HtmlText1 As htmlViewer:
         Height: =555
+        HtmlText: =""
         Width: =527
         X: =462
         Y: =213
