--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -160,6 +160,27 @@ Dashboard As screen:
             Y: =40
             ZIndex: =3
 
+        Rectangle4 As rectangle:
+            Height: =80
+            OnSelect: =Select(Parent)
+            Width: =524
+            X: =459
+            ZIndex: =4
+
+        Label20 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.'First Name'
+            X: =542
+            Y: =33
+            ZIndex: =5
+
+        Label21 As label:
+            OnSelect: =Select(Parent)
+            Text: =ThisItem.'Last Name'
+            X: =572
+            Y: =37
+            ZIndex: =6
+
     RecordGallery As gallery.galleryVertical:
         DelayItemLoading: =true
         Height: =504
@@ -306,6 +327,7 @@ Dashboard As screen:
         ZIndex: =27
 
     HtmlText1 As htmlViewer:
+        Fill: =RGBA(255, 255, 255, 1)
         Height: =555
         HtmlText: =""
         Width: =527
@@ -383,4 +405,18 @@ Dashboard As screen:
             X: =622
             Y: =439
             ZIndex: =33
+
+    Rectangle2 As rectangle:
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =555
+        Width: =527
+        X: =462
+        Y: =213
+        ZIndex: =35
+
+    Label22 As label:
+        Text: ="Text"
+        X: =40
+        Y: =40
+        ZIndex: =36
 
