--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -415,8 +415,24 @@ Dashboard As screen:
         ZIndex: =35
 
     Label22 As label:
-        Text: ="Text"
-        X: =40
-        Y: =40
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(56, 96, 178, 1)
+        FontWeight: =FontWeight.Bold
+        Height: =56
+        Size: =25
+        Text: ="Registration Form"
+        Width: =527
+        X: =462
+        Y: =215
         ZIndex: =36
+
+    Icon6 As icon.Cancel:
+        Color: =RGBA(255, 255, 255, 1)
+        Height: =40
+        Icon: =Icon.Cancel
+        Width: =55
+        X: =925
+        Y: =224
+        ZIndex: =37
 
