--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -329,7 +329,8 @@ Dashboard As screen:
     HtmlText1 As htmlViewer:
         Fill: =RGBA(255, 255, 255, 1)
         Height: =587
-        HtmlText: =""
+        HtmlText: |-
+            ="<div style='margin: 12px 10px 8px 10px; width: 1335px; height: 48px; background- color: white; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:5px'> </div>"
         Width: =527
         X: =462
         Y: =181
