--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -987,3 +987,16 @@ Dashboard As screen:
             Y: =728
             ZIndex: =39
 
+    Label22 As label:
+        Align: =Align.Center
+        Color: =RGBA(255, 255, 255, 1)
+        Fill: =RGBA(56, 96, 178, 1)
+        FontWeight: =FontWeight.Bold
+        Height: =70
+        Size: =25
+        Text: ="Registration Form"
+        Width: =532
+        X: =449
+        Y: =143
+        ZIndex: =41
+
