--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -132,7 +132,7 @@ Dashboard As screen:
         Items: ='Event Attendees Management'
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
-        TemplateSize: =88
+        TemplateSize: =50
         Width: =1366
         Y: =215
         ZIndex: =12
@@ -159,13 +159,6 @@ Dashboard As screen:
             X: =40
             Y: =40
             ZIndex: =3
-
-        Rectangle4 As rectangle:
-            Height: =80
-            OnSelect: =Select(Parent)
-            Width: =524
-            X: =459
-            ZIndex: =4
 
         Label20 As label:
             OnSelect: =Select(Parent)
@@ -270,14 +263,6 @@ Dashboard As screen:
         Y: =231
         ZIndex: =20
 
-    Button3_1 As button:
-        Color: =RGBA(50, 86, 160, 1)
-        Fill: =RGBA(0, 0, 0, 0)
-        Text: ="Contact"
-        X: =268
-        Y: =231
-        ZIndex: =21
-
     Button3_3 As button:
         Color: =RGBA(50, 86, 160, 1)
         Fill: =RGBA(0, 0, 0, 0)
@@ -285,14 +270,6 @@ Dashboard As screen:
         X: =669
         Y: =231
         ZIndex: =22
-
-    Button3_4 As button:
-        Color: =RGBA(50, 86, 160, 1)
-        Fill: =RGBA(0, 0, 0, 0)
-        Text: ="Email ID"
-        X: =475
-        Y: =231
-        ZIndex: =23
 
     Button3_5 As button:
         Color: =RGBA(50, 86, 160, 1)
@@ -397,25 +374,27 @@ Dashboard As screen:
             Y: =439
             ZIndex: =33
 
-    Icon1 As icon.Cancel:
-        Color: =RGBA(255, 255, 255, 1)
-        Icon: =Icon.Cancel
-        X: =921
-        Y: =139
-        ZIndex: =42
+    Button3_1 As button:
+        Color: =RGBA(50, 86, 160, 1)
+        Fill: =RGBA(0, 0, 0, 0)
+        Text: ="Contact"
+        X: =289
+        Y: =229
+        ZIndex: =43
 
     Regform As group:
         Height: =5
         Width: =5
         X: =40
         Y: =40
-        ZIndex: =42
+        ZIndex: =43
 
         HtmlText1 As htmlViewer:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =587
             HtmlText: |-
                 ="<div style='margin: 12px 10px 8px 10px; width: 1335px; height: 48px; background- color: white; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:5px'> </div>"
+            Visible: =false
             Width: =527
             X: =462
             Y: =181
@@ -424,6 +403,7 @@ Dashboard As screen:
         Rectangle2 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =587
+            Visible: =false
             Width: =527
             X: =462
             Y: =181
@@ -432,6 +412,7 @@ Dashboard As screen:
         Form1 As form:
             DataSource: ='Event Attendees Management'
             Height: =524
+            Visible: =false
             Width: =521
             X: =468
             Y: =244
@@ -972,12 +953,14 @@ Dashboard As screen:
         Button2 As button:
             OnSelect: =SubmitForm(Form1)
             Text: ="Submit"
+            Visible: =false
             X: =657
             Y: =728
             ZIndex: =39
 
         Rectangle5 As rectangle:
             Height: =82
+            Visible: =false
             Width: =523
             X: =462
             Y: =133
@@ -991,8 +974,25 @@ Dashboard As screen:
             Height: =72
             Size: =25
             Text: ="Registration Form"
+            Visible: =false
             Width: =519
             X: =462
             Y: =143
             ZIndex: =41
+
+        Icon1 As icon.Cancel:
+            Color: =RGBA(255, 255, 255, 1)
+            Icon: =Icon.Cancel
+            Visible: =false
+            X: =921
+            Y: =139
+            ZIndex: =42
+
+    Button3_4 As button:
+        Color: =RGBA(50, 86, 160, 1)
+        Fill: =RGBA(0, 0, 0, 0)
+        Text: ="Email Id"
+        X: =477
+        Y: =229
+        ZIndex: =44
 
