--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -118,61 +118,12 @@ Dashboard As screen:
     Button1 As button:
         Height: =57
         OnSelect: |-
-            =NewForm(Form1);UpdateContext({_ShowRegform:true})
+            =NewForm(Form1);UpdateContext({_ShowRegform:false})
         Text: ="Register Now"
         Width: =211
         X: =1142
         Y: =124
         ZIndex: =11
-
-    HeaderGallery As gallery.galleryVertical:
-        DelayItemLoading: =true
-        Fill: =RGBA(232, 244, 217, 1)
-        Height: =55
-        Items: ='Event Attendees Management'
-        Layout: =Layout.Vertical
-        LoadingSpinner: =LoadingSpinner.Data
-        TemplateSize: =50
-        Width: =1366
-        Y: =215
-        ZIndex: =12
-
-        Label18 As label:
-            OnSelect: =Select(Parent)
-            Text: =ThisItem.Title
-            X: =53
-            Y: =8
-            ZIndex: =1
-
-        Button3_2 As button:
-            Color: =RGBA(50, 86, 160, 1)
-            Fill: =RGBA(0, 0, 0, 0)
-            Text: ="Fname"
-            X: =2
-            Y: =48
-            ZIndex: =2
-
-        Button3_7 As button:
-            Color: =RGBA(50, 86, 160, 1)
-            Fill: =RGBA(0, 0, 0, 0)
-            Text: ="Lname"
-            X: =40
-            Y: =40
-            ZIndex: =3
-
-        Label20 As label:
-            OnSelect: =Select(Parent)
-            Text: =ThisItem.'First Name'
-            X: =542
-            Y: =33
-            ZIndex: =5
-
-        Label21 As label:
-            OnSelect: =Select(Parent)
-            Text: =ThisItem.'Last Name'
-            X: =572
-            Y: =37
-            ZIndex: =6
 
     RecordGallery As gallery.galleryVertical:
         DelayItemLoading: =true
@@ -373,14 +324,6 @@ Dashboard As screen:
             X: =622
             Y: =439
             ZIndex: =33
-
-    Button3_4 As button:
-        Color: =RGBA(50, 86, 160, 1)
-        Fill: =RGBA(0, 0, 0, 0)
-        Text: ="Email Id"
-        X: =477
-        Y: =229
-        ZIndex: =43
 
     Regform As group:
         Height: =5
@@ -988,13 +931,77 @@ Dashboard As screen:
             Y: =139
             ZIndex: =42
 
-    Button3_1 As button:
-        Color: =RGBA(50, 86, 160, 1)
-        Fill: =RGBA(0, 0, 0, 0)
-        Height: =33
-        Text: ="Contact Number"
-        Width: =179
-        X: =289
-        Y: =231
-        ZIndex: =44
+    Group5 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =45
+
+        HeaderGallery As gallery.galleryVertical:
+            DelayItemLoading: =true
+            Fill: =RGBA(232, 244, 217, 1)
+            Height: =55
+            Items: ='Event Attendees Management'
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplateSize: =50
+            Width: =1366
+            Y: =215
+            ZIndex: =12
+
+            Label18 As label:
+                OnSelect: =Select(Parent)
+                Text: =ThisItem.Title
+                X: =53
+                Y: =8
+                ZIndex: =1
+
+            Button3_2 As button:
+                Color: =RGBA(50, 86, 160, 1)
+                Fill: =RGBA(0, 0, 0, 0)
+                Text: ="Fname"
+                X: =2
+                Y: =48
+                ZIndex: =2
+
+            Button3_7 As button:
+                Color: =RGBA(50, 86, 160, 1)
+                Fill: =RGBA(0, 0, 0, 0)
+                Text: ="Lname"
+                X: =40
+                Y: =40
+                ZIndex: =3
+
+            Label20 As label:
+                OnSelect: =Select(Parent)
+                Text: =ThisItem.'First Name'
+                X: =542
+                Y: =33
+                ZIndex: =5
+
+            Label21 As label:
+                OnSelect: =Select(Parent)
+                Text: =ThisItem.'Last Name'
+                X: =572
+                Y: =37
+                ZIndex: =6
+
+        Button3_4 As button:
+            Color: =RGBA(50, 86, 160, 1)
+            Fill: =RGBA(0, 0, 0, 0)
+            Text: ="Email Id"
+            X: =477
+            Y: =229
+            ZIndex: =43
+
+        Button3_1 As button:
+            Color: =RGBA(50, 86, 160, 1)
+            Fill: =RGBA(0, 0, 0, 0)
+            Height: =33
+            Text: ="Contact Number"
+            Width: =179
+            X: =289
+            Y: =231
+            ZIndex: =44
 
