--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -337,7 +337,7 @@ Dashboard As screen:
             Height: =587
             HtmlText: |-
                 ="<div style='margin: 12px 10px 8px 10px; width: 1335px; height: 48px; background- color: white; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:5px'> </div>"
-            Visible: =false
+            Visible: =_ShowRegform
             Width: =527
             X: =462
             Y: =181
@@ -346,7 +346,7 @@ Dashboard As screen:
         Rectangle2 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =587
-            Visible: =false
+            Visible: =_ShowRegform
             Width: =527
             X: =462
             Y: =181
@@ -355,7 +355,7 @@ Dashboard As screen:
         Form1 As form:
             DataSource: ='Event Attendees Management'
             Height: =524
-            Visible: =false
+            Visible: =_ShowRegform
             Width: =521
             X: =468
             Y: =244
@@ -896,14 +896,14 @@ Dashboard As screen:
         Button2 As button:
             OnSelect: =SubmitForm(Form1)
             Text: ="Submit"
-            Visible: =false
+            Visible: =_ShowRegform
             X: =657
             Y: =728
             ZIndex: =39
 
         Rectangle5 As rectangle:
             Height: =82
-            Visible: =false
+            Visible: =_ShowRegform
             Width: =523
             X: =462
             Y: =133
@@ -917,7 +917,7 @@ Dashboard As screen:
             Height: =72
             Size: =25
             Text: ="Registration Form"
-            Visible: =false
+            Visible: =_ShowRegform
             Width: =519
             X: =462
             Y: =143
@@ -926,7 +926,9 @@ Dashboard As screen:
         Icon1 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            Visible: =false
+            OnSelect: |-
+                =UpdateContext({_ShowRegform:false})
+            Visible: =_ShowRegform
             X: =921
             Y: =139
             ZIndex: =42
