--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -254,7 +254,7 @@ Dashboard As screen:
         Y: =230
         ZIndex: =27
 
-    thankyou As group:
+    grpsuccess As group:
         Height: =5
         Width: =5
         X: =40
@@ -264,7 +264,7 @@ Dashboard As screen:
         Rectangle3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =442
-            Visible: =If(varsuccessTrue)
+            Visible: =If(varsuccess=true,true,false)
             Width: =561
             X: =419
             Y: =295
@@ -278,7 +278,7 @@ Dashboard As screen:
             Height: =64
             Size: =25
             Text: ="Thank you"
-            Visible: =If(varsuccessTrue)
+            Visible: =If(varsuccess=true,true,false)
             Width: =576
             X: =404
             Y: =295
@@ -290,7 +290,7 @@ Dashboard As screen:
             Height: =80
             Size: =25
             Text: ="Thank you for attendees event."
-            Visible: =If(varsuccessTrue)
+            Visible: =If(varsuccess=true,true,false)
             Width: =552
             X: =412
             Y: =561
@@ -299,7 +299,7 @@ Dashboard As screen:
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            Visible: =If(varsuccessTrue)
+            Visible: =If(varsuccess=true,true,false)
             Width: =50
             X: =930
             Y: =295
@@ -309,7 +309,7 @@ Dashboard As screen:
             Height: =473
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
-            Visible: =If(varsuccessTrue)
+            Visible: =If(varsuccess=true,true,false)
             Width: =585
             X: =404
             Y: =295
@@ -319,7 +319,7 @@ Dashboard As screen:
             Color: =RGBA(219, 219, 219, 1)
             Height: =122
             Icon: =Icon.Heart
-            Visible: =If(varsuccessTrue)
+            Visible: =If(varsuccess=true,true,false)
             Width: =134
             X: =622
             Y: =439
