--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -265,7 +265,7 @@ Dashboard As screen:
         Rectangle3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =442
-            Visible: =If(varsuccess=true,true,false)
+            Visible: =false
             Width: =561
             X: =419
             Y: =295
@@ -279,7 +279,7 @@ Dashboard As screen:
             Height: =64
             Size: =25
             Text: ="Thank you"
-            Visible: =If(varsuccess=true,true,false)
+            Visible: =false
             Width: =576
             X: =404
             Y: =295
@@ -291,7 +291,7 @@ Dashboard As screen:
             Height: =80
             Size: =25
             Text: ="Thank you for attendees event."
-            Visible: =If(varsuccess=true,true,false)
+            Visible: =false
             Width: =552
             X: =412
             Y: =561
@@ -300,7 +300,7 @@ Dashboard As screen:
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            Visible: =If(varsuccess=true,true,false)
+            Visible: =false
             Width: =50
             X: =930
             Y: =295
@@ -310,7 +310,7 @@ Dashboard As screen:
             Height: =473
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
-            Visible: =If(varsuccess=true,true,false)
+            Visible: =false
             Width: =585
             X: =404
             Y: =295
@@ -320,7 +320,7 @@ Dashboard As screen:
             Color: =RGBA(219, 219, 219, 1)
             Height: =122
             Icon: =Icon.Heart
-            Visible: =If(varsuccess=true,true,false)
+            Visible: =false
             Width: =134
             X: =622
             Y: =439
